--- a/nuxeo-distribution-dm/ftest/selenium/tests/taskLists.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/taskLists.html
@@ -117,6 +117,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>storeEval</td>
+	<td>selenium.browserbot.getCurrentWindow().document.body.innerHTML</td>
+	<td>innerhtml</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${innerhtml}</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Please select a list</td>
 	<td></td>
