NXP-7465: Add obsolete and ordering handling to select_vocabulary_tree widget

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_vocabulary_tree_widget_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/widgets/select_vocabulary_tree_widget_template.xhtml
@@ -67,7 +67,7 @@
         iconCollapsed="/icons/toggle_plus.png">
         <rich:recursiveTreeNodesAdaptor
           id="#{widget.id}_recursiveTreeNodesAdaptorId"
-          roots="#{vocabularyTreeActions.getRoots(widget.properties.directoryName)}"
+          roots="#{vocabularyTreeActions.getRoots(widget.properties.directoryName, widget.properties.showObsolete, widget.properties.sortByOrdering)}"
           nodes="#{node.children}"
           var="node">
           <rich:treeNode
