NXP-7581: click on the storyboard navigate in the video

--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_storyboard_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_storyboard_widget_template.xhtml
@@ -12,7 +12,9 @@
   <h3 class="summaryTitle">#{messages['heading.storyboard']}</h3>
 
   <ui:repeat var="item" value="#{storyboardActions.getItems(currentDocument)}">
-    <nxh:graphicImage url="#{item.url}" />
+    <a class="videoStoryboardItem" href="#play" timecode="#{item.timecode}">
+      <nxh:graphicImage url="#{item.url}" />
+    </a>
   </ui:repeat>
 
 </div>
