--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_player_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_player_widget_template.xhtml
@@ -12,10 +12,7 @@
 
   <link rel="stylesheet" href="#{baseURL}css/video-js.css" type="text/css" media="screen" title="Video JS"/>
   <script src="#{baseURL}scripts/video.js" type="text/javascript" charset="utf-8"></script>
-
-  <script type="text/javascript">
-    VideoJS.setupAllWhenReady();
-  </script>
+  <script src="#{baseURL}scripts/video-player-util.js" type="text/javascript" charset="utf-8"></script>
 
   <nxu:set var="staticPreview" value="#{videoActions.getURLForStaticPreview(currentDocument)}">
   <nxu:set var="mp4URL" value="#{videoActions.getTranscodedVideoURL(currentDocument, 'MP4 480p')}">
