NXCM-446: don't cancel an element already canceled and add icon

--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_document_route_element_state_widget_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/widgets/listing/listing_document_route_element_state_widget_template.xhtml
@@ -23,5 +23,8 @@
     <h:graphicImage value="icons/review_accepted.png"
       alt="#{field_0}" title="#{field_0}" />
   </c:if>
-
+  <c:if test="#{field_0 eq 'canceled'}">
+    <h:graphicImage value="icons/action_delete.gif"
+      alt="#{field_0}" title="#{field_0}" />
+  </c:if>
 </f:subview>
