--- a/nuxeo-distribution-dm/ftest/selenium/tests/adminCenter/vocabularies.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/adminCenter/vocabularies.html
@@ -153,7 +153,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='nxw_parent_1']/div</td>
+	<td>//div[@id='nxw_parent_1']</td>
 	<td>Antarctica (the territory South of 60 deg S)</td>
 </tr>
 <tr>
@@ -253,7 +253,7 @@
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='nxw_parent_3']/div</td>
+	<td>//div[@id='nxw_parent_3']</td>
 	<td>Afghanistan</td>
 </tr>
 <tr>
