NXP-7581: save work done

--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/incl/video/storyboard.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/incl/video/storyboard.xhtml
@@ -8,10 +8,12 @@
      xmlns:nxl="http://nuxeo.org/nxforms/layout"
      xmlns:nxd="http://nuxeo.org/nxweb/document">
 
-  <ui:repeat var="item" value="#{storyboardActions.getItems(videoDocument)}">
-    <a href="#play"
-      onclick="return unhidePlayerAndPlay('videoPlayerStaticPreview', 'videoPlayerObject', '#{item.timecode}');">
+  <nxu:set var="currentSelection" value="#{damDocumentActions.currentSelection}">
+  <ui:repeat var="item" value="#{storyboardActions.getItems(currentSelection)}">
+    <a class="videoStoryboardItem" href="#play" timecode="#{item.timecode}">
       <nxh:graphicImage url="#{item.url}" />
     </a>
   </ui:repeat>
+  </nxu:set>
+
 </div>
