--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/userprofile/user_profile.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/userprofile/user_profile.xhtml
@@ -1,37 +1,37 @@
 <div xmlns:h="http://java.sun.com/jsf/html"
   xmlns:nxl="http://nuxeo.org/nxforms/layout"
-  xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:rich="http://richfaces.org/rich"
+  xmlns:nxh="http://nuxeo.org/nxweb/html"
   xmlns:a4j="http://richfaces.org/a4j">
 
   <a4j:region>
     <a4j:outputPanel id="profilePanel">
 
-      <a4j:form id="userProfileButtons">
-        <table class="dataInput">
-          <tbody>
-            <tr>
-              <td class="iconColumn"></td>
-              <td class="labelColumn">
-                <a4j:commandButton
-                  value="#{messages['label.userManager.editUser']}"
-                  action="#{userProfileActions.setMode('edit')}"
-                  styleClass="button" id="editUserButton"
-                  rendered="#{userProfileActions.mode == 'view'}"
-                  reRender="profilePanel" />
-              </td>
-              <td class="fieldColumn">
-                 <a4j:commandButton
-                    value="#{messages['command.change.password']}"
-                    action="#{userProfileActions.setMode('editPassword')}"
-                    styleClass="button" id="editUserPasswordButton"
-                    rendered="#{userProfileActions.mode == 'view' and userProfileActions.canEdit}"
-                    reRender="profilePanel" />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </a4j:form>
+      <div class="globalActionBar">
+        <h:form id="userProfileButtons" rendered="#{userProfileActions.mode == 'view'}">
+          <ul class="actionList">
+             <li class="dropDownMenu">
+               <h:outputText value="#{messages['label.content.header.actions']}" />
+               <ul class="actionSubList">
+                 <li>
+                   <nxh:commandLink
+                        action="#{userProfileActions.setMode('edit')}"
+                        immediate="#{action.immediate}"
+                        rendered="#{userProfileActions.mode == 'view'}">
+                        <h:outputText value="#{messages['label.userManager.editUser']}" />
+                   </nxh:commandLink>
+                 </li>
+                 <li>
+                   <nxh:commandLink action="#{userProfileActions.setMode('editPassword')}"
+                      immediate="#{action.immediate}"
+                      rendered="#{userProfileActions.mode == 'view' and userProfileActions.canEdit}">
+                      <h:outputText value="#{messages['command.change.password']}" />
+                   </nxh:commandLink>
+                 </li>
+               </ul>
+             </li>
+          </ul>
+        </h:form>
+      </div>
 
       <h:form id="viewUser" rendered="#{userProfileActions.mode == 'view'}">
         <nxl:layout name="summary_user_profile_layout" mode="view"
@@ -95,8 +95,20 @@
           </tbody>
         </table>
       </a4j:form>
+    <script type="text/javascript">
+      jQuery(document).ready(function($) {
+        jQuery('.dropDownMenu').click(function(e) {
+          jQuery('.dropDownMenu').find('ul').hide();
+          jQuery(this).find("ul").show();
+          e.stopPropagation();
+        });
+
+        jQuery(document).click(function() {
+          jQuery('.dropDownMenu').find('ul').hide();
+        })
+      });
+    </script>
 
     </a4j:outputPanel>
   </a4j:region>
-
 </div>
