NXP-7768: display first and last Name user as title

--- a/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/userprofile/user_profile.xhtml
+++ b/nuxeo-user-profile/src/main/resources/web/nuxeo.war/incl/userprofile/user_profile.xhtml
@@ -8,6 +8,9 @@
 
       <div class="globalActionBar">
         <h:form id="userProfileButtons" rendered="#{userProfileActions.mode == 'view'}">
+          <h1>
+            <h:outputText value="#{userProfileActions.userProfile.user.firstName} #{userProfileActions.userProfile.user.lastName}"/>
+          </h1>
           <ul class="actionList">
              <li class="dropDownMenu">
                <h:outputText value="#{messages['label.content.header.actions']}" />
