--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header_template.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header_template.xhtml
@@ -28,10 +28,10 @@
       <div class="searchService">
 
         <c:if test="#{userServicesContext.searchEnabled}">
-          <nxu:repeat var="simpleSearchActions" value="#{webActions.getActionsList('SEARCH_BOX_TEMPLATE')}"
+          <c:forEach var="simpleSearchActions" items="#{webActions.getActionsList('SEARCH_BOX_TEMPLATE')}"
             id="#{widget.id}_simpleSearchActions">
             <ui:include src="#{simpleSearchActions.link}"/>
-          </nxu:repeat>
+          </c:forEach>
           <f:subview rendered="#{empty webActions.getActionsList('SEARCH_BOX_TEMPLATE')}">
             <h:inputText value="#{documentSearchActions.simpleSearchKeywords}" size="15"
               class="directoryFilter"
