NXP-7787: use explict id for f:subview to make it easier to functional / load test the search form

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header_template.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header_template.xhtml
@@ -26,13 +26,12 @@
   <div class="userSearchBlock">
     <h:form id="userServicesSearchForm">
       <div class="searchService">
-
         <c:if test="#{userServicesContext.searchEnabled}">
           <c:forEach var="simpleSearchActions" items="#{webActions.getActionsList('SEARCH_BOX_TEMPLATE')}"
             id="#{widget.id}_simpleSearchActions">
             <ui:include src="#{simpleSearchActions.link}"/>
           </c:forEach>
-          <f:subview rendered="#{empty webActions.getActionsList('SEARCH_BOX_TEMPLATE')}">
+          <f:subview id="userServicesSearchDefault" rendered="#{empty webActions.getActionsList('SEARCH_BOX_TEMPLATE')}">
             <h:inputText value="#{documentSearchActions.simpleSearchKeywords}" size="15"
               class="directoryFilter"
               onkeydown="if (event.keyCode == 13) {Element.next(Element.next(this)).select();} else return true;"
