--- a/nuxeo-distribution-dm/ftest/selenium/tests/testRequestEncoding.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testRequestEncoding.html
@@ -50,7 +50,7 @@
 <!--Recherche rapide-->
 <tr>
 	<td>type</td>
-	<td>//input[starts-with(@id,&quot;userServicesSearchForm&quot;) and contains(@id,&quot;simpleSearchKeywordsInput&quot;)]</td>
+	<td>//input[@id=&quot;userServicesSearchForm:userServicesSearchDefault:simpleSearchKeywordsInput&quot;]</td>
 	<td>héhé</td>
 </tr>
 <tr>
@@ -65,7 +65,7 @@
 </tr>
 <tr>
 	<td>verifyValue</td>
-	<td>//input[starts-with(@id,&quot;userServicesSearchForm&quot;) and contains(@id,&quot;simpleSearchKeywordsInput&quot;)]</td>
+	<td>//input[@id=&quot;userServicesSearchForm:userServicesSearchDefault:simpleSearchKeywordsInput&quot;]</td>
 	<td>héhé</td>
 </tr>
 <tr>
