NXP-7581: make the soryboard not clickable when the Flash video player is used

--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_storyboard_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_storyboard_widget_template.xhtml
@@ -12,9 +12,9 @@
   <h3 class="summaryTitle">#{messages['heading.storyboard']}</h3>
 
   <ui:repeat var="item" value="#{storyboardActions.getItems(currentDocument)}">
-    <a class="videoStoryboardItem" href="#play" timecode="#{item.timecode}">
+    <span class="videoStoryboardItem" timecode="#{item.timecode}">
       <nxh:graphicImage url="#{item.url}" />
-    </a>
+    </span>
   </ui:repeat>
 
 </div>
