--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_conversions_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_conversions_widget_template.xhtml
@@ -14,7 +14,7 @@
      }
    </style>
 
-  <h3 class="summaryTitle">Conversions</h3>
+  <h3 class="summaryTitle">#{messages['heading.videoConversions']}</h3>
 
   <table width="100%" cellspacing="0">
     <tbody>
