NXP-7581: make the widgets display nothing if the current document does not have the Video facet

--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_conversions_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_conversions_widget_template.xhtml
@@ -8,6 +8,8 @@
      xmlns:nxl="http://nuxeo.org/nxforms/layout"
      xmlns:nxd="http://nuxeo.org/nxweb/document">
 
+  <c:if test="#{currentDocument.hasFacet('Video')}">
+
    <style>
      .videoConversionRow:hover {
        background-color: #e6f6ff
@@ -49,4 +51,7 @@
       </c:forEach>
     </tbody>
   </table>
+
+  </c:if>
+
 </div>
