--- a/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_info_widget_template.xhtml
+++ b/nuxeo-platform-video-jsf/src/main/resources/web/nuxeo.war/widgets/summary/summary_video_info_widget_template.xhtml
@@ -2,12 +2,16 @@
   xmlns:c="http://java.sun.com/jstl/core"
   xmlns:nxl="http://nuxeo.org/nxforms/layout">
 
+  <c:if test="#{currentDocument.hasFacet('Video')}">
+
   <h3 class="summaryTitle">
     <h:outputText value="#{messages['heading.video.info']}" />
   </h3>
 
   <c:if test="#{currentDocument.hasFacet('Video')}">
     <nxl:layout value="#{currentDocument}" name="video_info" mode="view" />
+  </c:if>
+
   </c:if>
 
 </div>
