--- a/nuxeo-distribution-dm/ftest/selenium/tests/userCenter/userProfile.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/userCenter/userProfile.html
@@ -87,8 +87,18 @@
 	<td>555-4321</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>watchA4jRequests</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
 	<td>editUser:saveUserButton</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForA4jRequest</td>
+	<td>10000</td>
 	<td></td>
 </tr>
 <tr>
