--- a/nuxeo-distribution-resources/src/main/resources/doc-dm/readme.html
+++ b/nuxeo-distribution-resources/src/main/resources/doc-dm/readme.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-  <h1>Nuxeo Document Management 5.5-SNAPSHOT Release Notes</h1>
+  <h1>Nuxeo Document Management 5.5-I20111104_1115 Release Notes</h1>
 
-  <p>Welcome to Nuxeo Document Management (DM) 5.5-SNAPSHOT.</p>
+  <p>Welcome to Nuxeo Document Management (DM) 5.5-I20111104_1115.</p>
   
   <p>You can always download the latest releases of Nuxeo DM based on the Nuxeo Enterprise Platform from <a href="http://www.nuxeo.com/en/downloads">http://www.nuxeo.com/en/downloads</a>.</p>
 
